# latino-gtk

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ejemplo.lat  install_manifest.txt
src/: latino-gtk.c
